[gd_scene load_steps=10 format=3 uid="uid://bxcpb31qgji08"]

[ext_resource type="Script" path="res://scripts/game_mode/bubball.gd" id="1_5qfpv"]
[ext_resource type="PackedScene" uid="uid://b4j1cmrmcuhvm" path="res://scenes/game_modes/ingame_scenes/background.tscn" id="2_pp47a"]
[ext_resource type="PackedScene" uid="uid://bnfisykkl2cb6" path="res://scenes/game_modes/ingame_scenes/duck.tscn" id="3_18h01"]
[ext_resource type="PackedScene" uid="uid://c1jn5x64l5q8v" path="res://scenes/game_modes/ingame_scenes/bubble.tscn" id="4_4xxl7"]
[ext_resource type="PackedScene" uid="uid://bioxevgxmkxd5" path="res://scenes/game_modes/ingame_scenes/Goal.tscn" id="5_gqmha"]
[ext_resource type="PackedScene" uid="uid://crq1dv00bhbu4" path="res://scenes/ui/Bubball_HUD.tscn" id="6_txncv"]
[ext_resource type="AudioStream" uid="uid://ob8hhxoeng52" path="res://sounds/bathtime.wav" id="7_r628a"]
[ext_resource type="PackedScene" uid="uid://bqxe56iguvs7r" path="res://scenes/game_modes/ingame_scenes/BubbleSpawner.tscn" id="8_jfkaw"]

[sub_resource type="WorldBoundaryShape2D" id="WorldBoundaryShape2D_u41tq"]
distance = 30.25

[node name="BubbalGame" type="Node2D"]
y_sort_enabled = true
position = Vector2(101, 59)
script = ExtResource("1_5qfpv")

[node name="Background" parent="." instance=ExtResource("2_pp47a")]
position = Vector2(477, 263)

[node name="duck1" parent="." instance=ExtResource("3_18h01")]
position = Vector2(192, 183)

[node name="Bubble" parent="." instance=ExtResource("4_4xxl7")]
position = Vector2(472, 296)

[node name="RightGoal" parent="." instance=ExtResource("5_gqmha")]
position = Vector2(907, 269)

[node name="Hud" parent="." instance=ExtResource("6_txncv")]

[node name="LeftGoal" parent="." instance=ExtResource("5_gqmha")]
position = Vector2(64, 269)
team_id = 1

[node name="duck2" parent="." instance=ExtResource("3_18h01")]
position = Vector2(784, 391)
player_id = 1

[node name="WorldBorder2" type="StaticBody2D" parent="."]
position = Vector2(507, 620)
scale = Vector2(-1, -1)
collision_layer = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorder2"]
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_u41tq")

[node name="WorldBorder" type="StaticBody2D" parent="."]
position = Vector2(608, -88)
collision_layer = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorder"]
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_u41tq")

[node name="WorldBorder4" type="StaticBody2D" parent="."]
position = Vector2(1083, 221)
rotation = 1.5708
collision_layer = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorder4"]
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_u41tq")

[node name="WorldBorder3" type="StaticBody2D" parent="."]
position = Vector2(-133, 250)
rotation = 1.5708
scale = Vector2(-1, -1)
collision_layer = 7

[node name="CollisionShape2D" type="CollisionShape2D" parent="WorldBorder3"]
rotation = -3.14159
shape = SubResource("WorldBoundaryShape2D_u41tq")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_r628a")
volume_db = -10.0
bus = &"Music"

[node name="CharacterBody2D" parent="." instance=ExtResource("3_18h01")]
position = Vector2(192, 398)
player_id = 2

[node name="CharacterBody2D2" parent="." instance=ExtResource("3_18h01")]
position = Vector2(781, 181)
player_id = 3

[node name="GameTimer" type="Timer" parent="."]
one_shot = true

[node name="BubbleSpawner" parent="." instance=ExtResource("8_jfkaw")]
position = Vector2(476, 313)

[connection signal="bubble_collected" from="RightGoal" to="." method="_on_right_goal_bubble_collected"]
[connection signal="start_game" from="Hud" to="." method="_on_hud_start_game"]
[connection signal="unpause_game" from="Hud" to="." method="_on_hud_unpause_game"]
[connection signal="bubble_collected" from="LeftGoal" to="." method="_on_left_goal_bubble_collected"]
[connection signal="timeout" from="GameTimer" to="." method="_on_game_timer_timeout"]
